Added main content + social buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <title>Nagendra Mahesh</title>
 
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,800i">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,800i">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.3.0/font-mfizz.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -38,5 +40,43 @@
         <div class="profile_img"></div>
         <h1>Hello!</h1>
     </header>
+    <main>
+        <article id="about_me">
+            <p>
+                I am <strong>Nagendra Mahesh</strong>, a software developer living in Bengalūru, India.
+            </p>
+            <p>
+                <strong><em>I am passionate about building stuff that solves problems, and having fun while doing it.</em></strong>
+            </p>
+            <p>
+                Currently, I am part of a team building next-gen customer collaboration solutions for
+                <a target="_blank" href="https://cisco.com">Cisco Systems</a>.
+            </p>
+            <p>
+                I primarily code in <i class="icon-java-bold"></i> and <i class="icon-javascript-alt"></i>, and I love hacking
+                on <i class="icon-nodejs"></i>, and <i class="fa fa-2x fa-linux"></i>, specifically <i class="icon-script"></i>
+            </p>
+            <p>
+                Web services, Public-Key Encryption, NoSQL databases (Cassandra), Server-side javascript,
+                and Websockets are some of my current technology interests.
+            </p>
+            <p>
+                Beyond the world of software, I am also interested in re-usable space flight, stand-up comedy,
+                alternate history, street food, pasta, and most importantly - <em>Game of Thrones</em>.
+            </p>
+        </article>
+    </main>
+    <footer>
+        <article id="my_links">
+            <div class="links">
+                <a target="_blank" class="fa fa-2x fa-github" href="https://github.com/umnagendra"></a>
+                <a target="_blank" class="fa fa-2x fa-twitter" href="https://twitter.com/nagendra_um"></a>
+                <a target="_blank" class="fa fa-2x fa-facebook" href="https://facebook.com/nagendra.um"></a>
+                <a target="_blank" class="fa fa-2x fa-instagram" href="https://instagram.com/umnagendra"></a>
+                <a target="_blank" class="fa fa-2x fa-linkedin" href="https://in.linkedin.com/in/umnagendra"></a>
+                <a class="fa fa-2x fa-envelope" href="mailto://umnagendra@gmail.com?subject=Hi!"></a>
+            </div>
+        </article>
+    </footer>
 </body>
 </html>
