Fixing article padding for mobile screens

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a target="_blank" class="fa fa-2x fa-facebook" href="https://facebook.com/nagendra.um"></a>
                 <a target="_blank" class="fa fa-2x fa-instagram" href="https://instagram.com/umnagendra"></a>
                 <a target="_blank" class="fa fa-2x fa-linkedin" href="https://in.linkedin.com/in/umnagendra"></a>
-                <a class="fa fa-2x fa-envelope" href="mailto://umnagendra@gmail.com?subject=Hi!"></a>
+                <a class="fa fa-2x fa-envelope" href="mailto:umnagendra@gmail.com?subject=Hi!"></a>
             </div>
         </article>
     </footer>
