Adding favicon + misc. changes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <title>Nagendra Mahesh</title>
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,800i">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.3.0/font-mfizz.min.css">
@@ -46,7 +47,7 @@
                 I am <strong>Nagendra Mahesh</strong>, a software developer living in Bengalūru, India.
             </p>
             <p>
-                <strong><em>I am passionate about building stuff that solves problems, and having fun while doing it.</em></strong>
+                <strong><em>I am passionate about building stuff and solving problems, and having fun while doing it.</em></strong>
             </p>
             <p>
                 Currently, I am part of a team building next-gen customer collaboration solutions for
@@ -54,7 +55,7 @@
             </p>
             <p>
                 I primarily code in <i class="icon-java-bold"></i> and <i class="icon-javascript-alt"></i>, and I love hacking
-                on <i class="icon-nodejs"></i>, and <i class="fa fa-2x fa-linux"></i>, specifically <i class="icon-script"></i>
+                on <i class="icon-nodejs"></i> and <i class="fa fa-2x fa-linux"></i>, specifically <i class="icon-script"></i>
             </p>
             <p>
                 Web services, Public-Key Encryption, NoSQL databases (Cassandra), Server-side javascript,
