--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <title>Nagendra Mahesh</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,800i">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.3.0/font-mfizz.min.css">
