--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
             <p>
                 I primarily code in <i class="icon-java-bold"></i> and <i class="icon-javascript-alt"></i>, and I love hacking
-                on <i class="icon-nodejs"></i> and <i class="fa fa-2x fa-linux"></i>, specifically <i class="icon-script"></i>
+                on <i class="icon-nodejs"></i> and <i class="fa fa-2x fa-linux"></i>, specifically <i class="icon-script"> and <i class="icon-python"></i>
             </p>
             <p>
                 Web services, Public-Key Encryption, NoSQL databases (Cassandra), Server-side javascript,
